# svc-transactions/api/rest/routes.go
@@ -18,13 +18,17 @@ func RegisterRoutes(mux *http.ServeMux, controller *TransactionsController) {
 	depositHandler := otelhttp.NewHandler(http.HandlerFunc(controller.DepositHandler), "DepositHandler")
 
 	// 1. deposit handler
-	mux.Handle("/v1/transactions/deposit", depositHandler)
+	mux.Handle("POST /v1/transactions/deposit", depositHandler)
 
 	withdrawHandler := otelhttp.NewHandler(http.HandlerFunc(controller.WithdrawHandler), "WithdrawHandler")
 	// 2. withdraw handler
-	mux.Handle("/v1/transactions/withdraw", withdrawHandler)
+	mux.Handle("POST /v1/transactions/withdraw", withdrawHandler)
 
-	// 3. Swagger UI handler mounted directly to your mux
+	// 3. transfer handler
+	transferHandler := otelhttp.NewHandler(http.HandlerFunc(controller.TransferHandler), "TransferHandler")
+	mux.Handle("POST /v1/transactions/transfer", transferHandler)
+
+	// 4. Swagger UI handler mounted directly to your mux
 	mux.HandleFunc("/v1/swagger/", httpSwagger.Handler(
 		httpSwagger.URL("/v1/swagger/doc.json"),
 	))
