# svc-transactions/internal/transactions/model.go
@@ -25,8 +25,10 @@ type Transaction struct {
 	ID primitive.ObjectID `bson:"_id,omitempty"`
 
 	//referece id is a string to prevent idempotency
-	//ReferenceID string `bson:"reference_id"`
-	PhoneNumber string 	 `bson:"phone_number"`
+	ReferenceID 	string 	 		`bson:"reference_id"`
+	AssociatedRef 	string 	 		`bson:"associated_ref,omitempty"` // this is the reference id of the other transaction in case of transfer,
+	//  it will be empty for deposit and withdraw
+	PhoneNumber string 	 	`bson:"phone_number"`
 
 	// empty if the transaction is deposit or withdraw
 	SenderPhone   string `bson:"sender_phone,omitEmpty"` 
@@ -61,9 +63,14 @@ var (
 	ErrExceedsMaxBalance   = errors.New("deposit exceeds maximum wallet capacity")
 	// errors related  to transaction
 	//ErrDuplicateReferenceID   = errors.New("transaction with the same reference ID already exists")
-	ErrInvalidTransactionType = errors.New("invalid transaction type")
+	
 	ErrFirstTransaction = errors.New("first transaction insertion")
 	ErrDuplicateSequence = errors.New("duplicate sequence number")
+	ErrDuplicateReferenceID = errors.New("duplicate reference ID")
+	ErrInvalidTransactionStatus = errors.New("invalid transaction status")
+	ErrTransactionNotFound = errors.New("transaction not found")
+	ErrHighFrequencyTransaction = errors.New("high frequency of transactions detected, please try again later")
+	ErrHalfTransferFail = errors.New("Receiver could not accept the transfer")
 )
 
 // wallet max
